# test2

./: CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp
